src/test/ui/resolve/issue-22692.stderr
error[E0423]: expected value, found struct `String`
  --> $DIR/issue-22692.rs:2:13
   |
LL |     let _ = String.new();
   |             ^^^^^^----
   |             |
   |             help: use `::` to access an associated function: `String::new`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
